[project]
name = "reactivegtk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yibo Wei", email = "david_wyb2001@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pygobject>=3.52.3",
    "pygobject-stubs>=2.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E731",  # Lambda assignment
    "E741",  # Ambiguous variable name
]
